[project]
name = "rlm-rag-hybrid"
version = "0.1.0"
description = "Hybrid MCP research server using RLM as orchestrator and CocoIndex as semantic retrieval"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  "mcp",
  "python-dotenv",
  "rlms @ git+https://github.com/alexzhang13/rlm.git",
]

[project.scripts]
rlm-rag-hybrid = "rlm_rag_hybrid.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_rag_hybrid"]
